# pyo3-bug

./: Cargo.toml
src/: lib.rs
