[package]
name = "pyo3-bug"
version = "0.1.0"
authors = ["hengchu <hengchu.zhang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyo3_bug"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
path = '../pyo3'
